# korean-internal-file-viewer

./: README.md  config.py  main.py  pyproject.toml  replit.md  requirements.txt
core/: auth.py
ui/: content_viewer.py  file_browser.py  login_dialog.py  main_window.py  search_widget.py
utils/: com_powerpoint_converter.py  excel_handler.py  file_manager.py  image_handler.py  logger.py  pdf_handler.py  powerpoint_handler.py  ppt_to_pdf_converter.py  search_indexer.py  text_handler.py  word_handler.py
